--- a/styles/style.css
+++ b/styles/style.css
@@ -27,5 +27,27 @@ h1{
 
 .contenu p {
     padding : 5vw 10 vw;
-    text align: justify;
+    text-align: justify;
+}
+
+footer {
+    flex-shrink:0;
+    border-top: 1px dashed #000;
+    width: 100%;
+    background: #f1f1f1;
+    color: #333;
+}
+
+.contenu-footer {
+    width:1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content :center;
+    align-items: flex-start;
+    font-size:20px;
+    padding:50px 0 100px;
+}
+
+img {
+    width:20px;
 }
