--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,59 @@ footer {
     padding:50px 0 100px;
 }
 
-img {
-    width:20px;
+    .bloc {
+        width:25%;
+        margin: 0 30px;
+        
+    }
+
+    /* contact */
+    .footer-contact h3,
+    .footer-services h3,
+    .footer-horaires h3,
+    .footer-medias h3 {
+        font-size:25px;
+        padding-bottom:20px;
+    }
+
+.footer-contact p {
+    padding: 5px 0;
+
+}
+
+/*Services*/
+.liste-services,
+.liste-horaires,
+.liste-medias {
+    list-style-type:none;
+}
+
+.liste-services li {
+    padding: 2px 0;
+}
+
+.list-services a {
+    text-decoration:none;
+    color: #333;
+}
+
+.liste-services a:hover {
+    color:rgb(3,3,3);
+}
+
+
+
+/*Medias */
+
+.liste-medias img {
+    width: 40px;
+    margin : 10px 10px;
+}
+
+.liste-medias a {
+    text-decoration:none;
+    color: #333;
+    display: flex;
+    align-items :center;
+    font-size:25px;
 }
