modification du responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,3 +123,21 @@ bloc:nth-child(1),
 bloc:nth-child(2), {
     margin-bottom: 50px;
 }
+
+@media screen and (max-width: 800px) {
+    .contenu-footer {
+        width:320px;
+    }
+    .bloc {
+        width: 300px;
+        margin:30px 30px;
+
+    }
+    bloc:nth-child(1),
+    bloc:nth-child(2), {
+    margin-bottom: 30px;
+    }
+    bloc:nth-child(1){
+        margin-top:0;
+    }
+}
